--- a/ImageSlider/style.css
+++ b/ImageSlider/style.css
@@ -21,7 +21,7 @@ body,.container{
 }
 
 main{
-    
+    /* margin-top:40%; */
 }
 
 .img-nav-buttons{
@@ -29,7 +29,7 @@ main{
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid black;
-    width:50%;
+    width:30%;
     margin:0 auto;
 }
 .img-nav-buttons a{
@@ -67,7 +67,8 @@ main{
   }
 
 .img-holder{
-    width: 80%;
+    max-width: 85%;
+    height: 70vh;
     flex-shrink: 0;
     padding:1rem;
     scroll-snap-align: center;
@@ -76,5 +77,10 @@ main{
     width: 100%;
     height: 100%;
     border-radius: 20px;
+}
+
+
+.background{
+    background-color: rgba(32, 32, 32, 0.5);
 }
 
