added scroll event listener to listen for scrollLeft to dynamically change highlighted navbar when sliding. Added debounce function to limit amount of calls for scroll

--- a/ImageSlider/style.css
+++ b/ImageSlider/style.css
@@ -67,8 +67,9 @@ main{
   }
 
 .img-holder{
-    max-width: 85%;
-    height: 70vh;
+    min-width: 65%;
+    /* max-width: 70%; */
+    height: 80vh;
     flex-shrink: 0;
     padding:1rem;
     scroll-snap-align: center;
